@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-03T16:11:20Z",
-  "count_outdated" : 421,
-  "uniques_outdated" : 29,
-  "count" : 425,
+  "timestamp" : "2022-07-04T00:56:10Z",
+  "count_outdated" : 424,
+  "uniques_outdated" : 30,
+  "count" : 427,
   "uniques" : 31,
   "views" : [
-    {
-      "timestamp": "2022-06-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-28T00:00:00Z",
       "count": 3,
