@@ -1,12 +1,7 @@
 {
-  "count": 4,
+  "count": 3,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-06-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-28T00:00:00Z",
       "count": 3,
