@@ -1,3 +1,10 @@
+2022-07-04T00:56:10Z:
+* notice: last 14d: unq all: 1 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 29 421 / 31 425
+* notice: next accum: outdated-unq outdated-all / unq all: 30 424 / 31 427
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-06-19] / []
+
 2022-07-03T16:11:20Z:
 * notice: last 14d: unq all: 1 4
 * notice: prev accum: outdated-unq outdated-all / unq all: 29 421 / 31 427
